Fixed bar alignment line issue
Former-commit-id: 761ba0649a8390d213838d262201b9af16735161

--- a/assets/less/edware.less
+++ b/assets/less/edware.less
@@ -515,7 +515,7 @@ table {
   
   .ui-jqgrid tr.jqgrow td {
     white-space: normal !important;
-    padding: 4px 2px;
+    padding: 0px 2px;
     a {
       float: left;
     }
